# Glaucoma_prediction_webApp

./: .gitattributes  .gitignore  README.md  app.js  app.py  index.html  main.py  model.py  package-lock.json  pyproject.toml  requirements.txt  styles.css
