[tool.poetry]
name = "glaucoma"
version = "0.1.0"
description = ""
authors = ["Surajit-Ghorai <it.20203013@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.111.0"
einops = "0.8.0"
torch = "2.3.1"
torchvision = "0.18.1"
matplotlib = "3.9.0"
pandas = "2.2.2"
numpy = "1.26.4"
pillow = "9.5.0"
scikit-learn = "1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
